--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Aldarean/egghead-react-boilerplate-rodney.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Aldarean/egghead-react-boilerplate-rodney/issues"
+  },
+  "homepage": "https://github.com/Aldarean/egghead-react-boilerplate-rodney#readme"
 }
