--- a/package.json
+++ b/package.json
@@ -19,7 +19,18 @@
 	},
 	"homepage": "https://github.com/Aldarean/egghead-react-boilerplate-rodney#readme",
 	"devDependencies": {
+		"@babel/cli": "^7.4.3",
+		"@babel/core": "^7.4.3",
+		"@babel/preset-env": "^7.4.3",
+		"@babel/preset-react": "^7.0.0",
+		"babel-loader": "^8.0.5",
+		"html-webpack-plugin": "^3.2.0",
 		"webpack": "4.25.1",
 		"webpack-cli": "^3.3.1"
+	},
+	"dependencies": {
+		"prop-types": "^15.7.2",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6"
 	}
 }
