--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
         "dev": "webpack-dev-server --open --config webpack.config.dev.js",
         "dev:hot": "npm run dev -- --hot",
         "test": "jest",
-        "format": "pretty-quick"
+        "format": "pretty-quick",
+        "lint": "eslint ./"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "pretty-quick --staged && npm run lint && npm run test"
+        }
     },
     "author": "",
     "license": "ISC",
@@ -28,14 +34,25 @@
         "@babel/plugin-syntax-dynamic-import": "^7.2.0",
         "@babel/preset-env": "^7.4.3",
         "@babel/preset-react": "^7.0.0",
+        "babel-eslint": "^10.0.1",
         "babel-loader": "^8.0.5",
         "core-js": "^2.5.7",
         "css-loader": "^2.1.1",
+        "eslint": "^5.16.0",
+        "eslint-config-standard": "^12.0.0",
+        "eslint-plugin-import": "^2.17.2",
+        "eslint-plugin-jsx-a11y": "^6.2.1",
+        "eslint-plugin-node": "^8.0.1",
+        "eslint-plugin-promise": "^4.1.1",
+        "eslint-plugin-react": "^7.12.4",
+        "eslint-plugin-standard": "^4.0.0",
         "html-webpack-plugin": "^3.2.0",
+        "husky": "^2.1.0",
         "jest": "^24.7.1",
         "jest-dom": "^3.1.3",
         "prettier": "^1.17.0",
         "pretty-quick": "^1.10.0",
+        "react-axe": "^3.1.0",
         "react-testing-library": "^7.0.0",
         "style-loader": "^0.23.1",
         "webpack": "4.25.1",
